Loading TaskBar Progress

--- a/eTools Ultimate/Views/Windows/SplashScreen.xaml
+++ b/eTools Ultimate/Views/Windows/SplashScreen.xaml
@@ -7,6 +7,9 @@
         ResizeMode="NoResize"
         Background="Transparent"
         AllowsTransparency="True">
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo x:Name="taskbarItemInfo" ProgressState="Normal" />
+    </Window.TaskbarItemInfo>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
